# llvm_course

task1/: CMakeLists.txt  README.md  app.c  sim.c  sim.h
task1/LLVM_IR/: app.ll
task2/: CMakeLists.txt  log.c  pass.cpp  res.txt
task3/: instrumented_app.cpp  instrumented_app_ir.cpp
